# canon_images_rename

./: .gitignore  README.md  REVIEW.md  pyproject.toml  rename_and_move_files.py
tests/: conftest.py  test_exif.py  test_file_operations.py  test_filename_gen.py  test_main.py  test_misc.py  test_plan_moves.py  test_process_files.py  test_validation.py
